Fixing logo clipping off page and contact icons falling on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,8 @@ a:hover {
 .logo {
 	position: relative;
 	display: inline-block;
-	width: 350px;
+	max-width: 350px;
+	width: 100%;
 	margin-top: 15px;
 }
 
@@ -447,7 +448,7 @@ button:hover {
 		margin: 30px 0;
 		width: 100%;
 	}
-	
+
 	.icon {
   	padding: 10px;
 	}
@@ -474,15 +475,26 @@ button:hover {
 	}
 }
 
-@media screen and (max-width:550px){
+@media screen and (max-width:580px){
   .icon {
     font-size: 35px;
     padding: 5px;
   }
-  
 }
 
+@media screen and (max-width:420px){
+  .icon {
+    font-size: 20px;
+    padding: 5px;
+  }
+}
 
+@media screen and (max-width:330px){
+  .icon {
+    font-size: 10px;
+    padding: 5px;
+  }
+}
 
 /*
 input[type=text], textarea {
